Fixed spacing of piles.

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ tiles {
   justify-content: center;
 }
 
-tiles + tiles {
+hand tiles + tiles {
   margin-top: var(--tileHeight);
 }
 
